# sh_sfp_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: AnalyzeSoundFile.action  DownloadAudio.action  PlaySoundFile.action
msg/: AudioCharacteristics.msg  AudioVisualization.msg  BeginPlayback.msg  LabeledAudioCharacteristics.msg  LabeledAudioVisualization.msg  OnsetDetectionAlgorithms.msg  PlaybackCommand.msg  PlaybackUpdate.msg  RhythmDetectionAlgorithms.msg  WindowingAlgorithms.msg
srv/: RequestAudioTranslation.srv  RequestPlaybackCommand.srv
